Wl-726 | Alignment fix in course about page.

--- a/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
+++ b/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
@@ -34,6 +34,9 @@ a{
     color: $brand-color !important;
   }
 }
+.no-padding{
+  padding: 0 !important;
+}
 #success-message{
   padding: 0;
   .alert {
